                meditor version 5.2.1


  In this release:

    * Upgraded to Jeuclid 3.1.14, Fop 2.4 and Batik 1.12

    * Plot based on SwingX JXGraph

    * Tested script engines:

      ch.epfl.lamp#dotty-compiler_0.22;0.22.0-RC1 (requires Java 8)

    * Tested libraries:

      de.uni-mannheim.rz.krum#jas;2.6.5988 (need to replace Log4j 2.5 by 2.13.0 for the library to work with Dotty)
      org.apache.logging.log4j#log4j-core;2.13.0
      org.apache.logging.log4j#log4j-api;2.13.0
      org.apache.commons#commons-math3;3.2
      cc.redberry#rings;2.5.7


  In version 5.1.1:

    * Restored Paste-from-Wiki

    * Upgraded to linoleum 1.6

    * Tested script engines:

      com.github.rjolly#jshellscriptengine;1.0 (requires Java 9)
      org.python#jython-standalone;2.7.1
      org.jruby#jruby-complete;9.1.17.0
      org.frege-lang#frege-interpreter-core;1.2

    * Tested libraries:

      de.uni-mannheim.rz.krum#jas;2.6.5803 (need to install log4j#log4j;1.2.17 manually)
      cc.redberry#rings.scaladsl_2.12;2.5.2


  In version 5.0:

    * Due to java.net being stopped, the module system and the web folder are broken

    * As a result, meditor is re-developed to run on http://raphael.jolly.free.fr/linoleum

    * Most of the functionality is preserved, except for:

      Paste from Wiki, due to SnuggleTeX not being available in Maven Central
      The web folder, which is replaced by making pull requests to the github repository
      Every script engine/library that is not available in Maven

    * Available (and tested) modules are currently:

      org.beanshell#bsh;2.0b5
      org.scala-lang#scala-compiler;2.12.2


  In version 4.2:

    * Upgrade to Netbeans platform version 7.4

      System.out redirected to output panel
      computations made in their own thread so as to not block the UI
      added a "Working" dialog

    * Scripting engine/library upgrades:

      jas-2.5.4855
      jython-2.7b2custom

    * Technical changes:
