@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ivy-module version="2.0" xmlns:e="http://ant.apache.org/ivy/extra">
-    <info module="meditor" organisation="net.sourceforge.jscl-meditor" revision="5.2.1">
+    <info module="meditor" organisation="net.sourceforge.jscl-meditor" revision="5.3">
         <description homepage="http://jscl-meditor.sourceforge.net/"/>
     </info>
     <configurations>
