@@ -1,7 +1,14 @@
-                meditor version 5.2.1
+                meditor version 5.3
 
 
   In this release:
+
+    * Externalized graph as jscl.editor.Graph
+
+    * Upgraded to Java 8 and Snuggletex 1.3.0
+
+
+  In version 5.2.1:
 
     * Upgraded to Jeuclid 3.1.14, Fop 2.4 and Batik 1.12
 
